Adding in some more pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 		"jsx": "react",
 		"incremental": true,
 		"noUncheckedIndexedAccess": true,
-		"baseUrl": ".",
+		"baseUrl": "./src",
 		"paths": {
 			"~/*": ["./src/*"]
 		},
